[hr] update from Pootle (firefox)

--- a/hr/browser/chrome/browser/preferences/preferences.properties
+++ b/hr/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=Sljedeći kolačići su pohranjeni na vašem računalu:
 cookiesFiltered=Sljedeći kolačići odgovaraju vašem traženom pojmu:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Ukloni izvanmrežne podatke stranica
 offlineAppRemovePrompt=Nakon uklanjanja podataka, %S neće biti dostupna dok niste na mreži. Jeste li sigurni da želite ukloniti podatke?
 offlineAppRemoveConfirm=Ukloni izvanmrežne podatke
