--- a/hr/browser/chrome/browser/shellservice.properties
+++ b/hr/browser/chrome/browser/shellservice.properties
@@ -4,10 +4,15 @@
 
 optionsLabel=%S &Opcije
 safeModeLabel=%S &Sigurni način rada
-setDefaultBrowserTitle=Zadani preglednik
-setDefaultBrowserMessage=%S trenutno nije vaš zadan web preglednik. Želite li ga postaviti kao zadanog?
-setDefaultBrowserDontAsk=Uvijek provjeri pri pokretanju %S.
-alreadyDefaultBrowser=%S je već postavljen kao vaš zadani preglednik.
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserOptions.label     = Mogućnosti
+setDefaultBrowserOptions.accesskey = M
+setDefaultBrowserNever.label       = Ne pitaj me ponovo
+setDefaultBrowserNever.accesskey   = N
+
+
 desktopBackgroundLeafNameWin=Pozadina radne površine.bmp
 DesktopBackgroundDownloading=Spremanje slike...
 DesktopBackgroundSet=Postavi pozadinu radne površine
