--- a/hr/dom/chrome/accessibility/AccessFu.properties
+++ b/hr/dom/chrome/accessibility/AccessFu.properties
@@ -10,12 +10,12 @@ screenReaderStopped = Čitač zaslona zaustavljen
 menubar        =       traka izbornika
 scrollbar      =       klizna traka
 grip           =       zahvat
-alert          =       obavijest
+alert          =       upozorenje
 menupopup      =       prozor izbornika
 document       =       dokument
 pane           =       okno
 dialog         =       okvir
-separator      =       separator
+separator      =       razdjelnik
 toolbar        =       alatna traka
 statusbar      =       statusna traka
 table          =       tablica
@@ -29,7 +29,7 @@ list           =       popis
 listitem       =       stavka popisa
 outline        =       obris
 outlineitem    =       ocrtaj stavku
-pagetab        =       kartica stranice
+pagetab        =       kartica
 propertypage   =       stranica svojstava
 graphic        =       grafika
 pushbutton     =       tipka
@@ -44,10 +44,10 @@ animation      =       animacija
 equation       =       jednadžba
 buttonmenu     =       izbornik tipke
 whitespace     =       prazni prostor
-pagetablist    =       popis kartica stranice
+pagetablist    =       popis kartica
 canvas         =       platno
 checkmenuitem  =       potvrdna stavka izbornika
-label          =       naziv
+label          =       oznaka
 passwordtext   =       tekst lozinke
 radiomenuitem  =       radio stavka izbornika
 textcontainer  =       tekst okvir
@@ -55,14 +55,14 @@ togglebutton   =       tipka za uključivanje/isključivanje
 treetable      =       razgranata tablica
 header         =       zaglavlje
 footer         =       podnožje
-paragraph      =       paragraf
+paragraph      =       odlomak
 entry          =       unos
 caption        =       natpis
 heading        =       naslov
 section        =       odjeljak
 form           =       obrazac
 comboboxlist   =       popis kombiniranih okvira
-comboboxoption =       mogućnosti kombiniranih okvira
+comboboxoption =       mogućnost kombiniranih okvira
 imagemap       =       image map
 listboxoption  =       opcija
 listbox        =       popis okvira
@@ -94,11 +94,10 @@ listEnd        =       Zadnja stavka
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       1 stavka;#1 stavke;#1 stavki
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %1$S %2$S od %3$S
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
+objItemOfN      =       %1$S od %2$S
 
 # Landmark announcements
 banner         =       oglas
@@ -108,17 +107,14 @@ main           =       početna
 navigation     =       navigacija
 search         =       pretraživanje
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S sa %S i %S
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 stupac;#1 stupca;#1 stupaca
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+tblColumnInfo = s 1 stupcem;sa #1 stupca;sa #1 stupaca
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 red;#1 reda;#1 redova
+tblRowInfo = i 1 red;i #1 reda;i #1 redova
 
 # table or grid cell information
 columnInfo = Stupac %S
@@ -190,18 +186,85 @@ quicknav_Table       = Tablice
 quicknav_Checkbox    = Kućice
 
 # Shortened role names for braille
-linkAbbr           =       lnk
-pushbuttonAbbr     =       btn
-passwordtextAbbr   =       passwdtxt
-imagemapAbbr       =       imgmap
-figureAbbr         =       fig
-textareaAbbr       =       txtarea
+menubarAbbr        =       traka izbornika
+scrollbarAbbr      =       klizna traka
+gripAbbr           =       zahvat
+alertAbbr          =       upozorenje
+menupopupAbbr      =       skočni prozor izbornika
+documentAbbr       =       dokument
+paneAbbr           =       okno
+dialogAbbr         =       okvir
+separatorAbbr      =       razdjelnik
+toolbarAbbr        =       alatna traka
+statusbarAbbr      =       statusna traka
 tableAbbr          =       tbl
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+columnheaderAbbr   =       zaglavlje stupca
+rowheaderAbbr      =       zaglavlje reda
+columnAbbr         =       stupac
+rowAbbr            =       red
+cellAbbr           =       ćelija
+linkAbbr           =       lnk
+listAbbr           =       popis
+listitemAbbr       =       stavka popisa
+outlineAbbr        =       obris
+outlineitemAbbr    =       ocrtaj stavku
+pagetabAbbr        =       kartica
+propertypageAbbr   =       stranica svojstava
+graphicAbbr        =       grafika
+pushbuttonAbbr     =       btn
+checkbuttonAbbr    =       potvrdna tipka
+radiobuttonAbbr    =       radio tipka
+comboboxAbbr       =       kombinirani okvir
+progressbarAbbr    =       traka napretka
+sliderAbbr         =       klizna traka
+spinbuttonAbbr     =       spin tipka
+diagramAbbr        =       dijagram
+animationAbbr      =       animacija
+equationAbbr       =       jednadžba
+buttonmenuAbbr     =       izbornik tipke
+whitespaceAbbr     =       prazni prostor
+pagetablistAbbr    =       popis kartica stranice
+canvasAbbr         =       platno
+checkmenuitemAbbr  =       potvrdna stavka izbornika
+labelAbbr          =       naziv
+passwordtextAbbr   =       passwdtxt
+radiomenuitemAbbr  =       radio stavka izbornika
+textcontainerAbbr  =       tekst okvir
+togglebuttonAbbr   =       tipka za uključivanje/isključivanje
+treetableAbbr      =       razgranata tablica
+headerAbbr         =       zaglavlje
+footerAbbr         =       podnožje
+paragraphAbbr      =       paragraf
+entryAbbr          =       unos
+captionAbbr        =       natpis
+headingAbbr        =       naslov
+sectionAbbr        =       odjeljak
+formAbbr           =       obrazac
+comboboxlistAbbr   =       popis kombiniranih okvira
+comboboxoptionAbbr =       mogućnosti kombiniranih okvira
+imagemapAbbr       =       imgmap
+listboxoptionAbbr  =       opcija
+listboxAbbr        =       popis okvira
+flatequationAbbr   =       ravna jednadžba
+gridcellAbbr       =       ćelija mreže
+noteAbbr           =       bilješka
+figureAbbr         =       fig
+definitionlistAbbr =       popis definicija
+termAbbr           =       termin
+definitionAbbr     =       definicija
+textareaAbbr       =       txtarea
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1c;#1c
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1c;#1c
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r;#1r
+tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = c%Sr%S
+
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
