--- a/hr/dom/chrome/security/csp.properties
+++ b/hr/dom/chrome/security/csp.properties
@@ -65,6 +65,9 @@ scriptFromStringBlocked = Blokiran je pokušaj pozivanja JavaScripta iz stringa 
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 hostNameMightBeKeyword = Interpretacija %1$S kao adrese poslužitelja, umjesto ključne riječi. Ako ste namjeravali da ovo bude ključna riječ,  koristite '%2$S' (unutar jednostrukih navodnika).
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
+notSupportingDirective = Direktiva '%1$S' nije podržana. Direkvite i vrijednosti će biti ignorirani.
 
 # CSP Errors:
 policyURINotAlone = policy-uri direktiva se može pojaviti isključivo sama
