--- a/hr/security/manager/chrome/pipnss/nsserrors.properties
+++ b/hr/security/manager/chrome/pipnss/nsserrors.properties
@@ -299,3 +299,6 @@ SEC_ERROR_LOCKED_PASSWORD=Lozinka je zaključana.
 SEC_ERROR_UNKNOWN_PKCS11_ERROR=Nepoznata PKCS #11 greška.
 SEC_ERROR_BAD_CRL_DP_URL=Neispravan ili nepodržan URL u imenu CRL distribucije.
 SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=Certifikat je potpisan koristeći algoritam potpisivanja koji je onemogućen jer se smatra nesigurnim.
+MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Poslužitelj koristi "key pinning" (HPKP), ali nije moguće sastaviti nijedan lanac certifikata koji odgovara pinsetu. "Key pinning" prekršaji se ne mogu zaobići.
+MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Poslužitelj koristi certifikat s proširenjem osnovnih uvjeta koji ga identificiraju kao certifikacijsku kuću. Za ispravno izdan certifikat, ovo ne bi smio biti slučaj.
+MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Poslužitelj je prezentirao certifikat s ključem premale dužine za uspostavljanje sigurne veze.
