--- a/hr/toolkit/chrome/global/aboutSupport.properties
+++ b/hr/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = ClearType parametri nisu pronađeni
 adapterDescription = Opis adaptera
 adapterVendorID = ID proizvođača
 adapterDeviceID = ID uređaja
+adapterSubsysID = Subsys ID
 adapterDrivers = Upravljački programi adaptera
 adapterRAM = RAM adaptera
 driverVersion = Inačica upravljačkog programa
@@ -71,6 +72,7 @@ driverDate = Datum upravljačkog programa
 adapterDescription2 = Opis adaptera (GPU #2)
 adapterVendorID2 = ID proizvođača (GPU #2)
 adapterDeviceID2 = ID uređaja (GPU #2)
+adapterSubsysID2 = Subsys ID (GPU #2)
 adapterDrivers2 = Upravljački programi adaptera (GPU #2)
 adapterRAM2 = RAM adaptera (GPU #2)
 driverVersion2 = Inačica upravljačkih programa (GPU #2)
