--- a/hr/webapprt/webapprt/webapp.properties
+++ b/hr/webapprt/webapprt/webapp.properties
@@ -40,6 +40,14 @@ webapps.install.title=Instaliraj %S
 webapps.install.description=Želite li instalirati %S?
 webapps.install.install=Instaliraj aplikaciju
 webapps.install.dontinstall=Nemoj instalirati
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+webapps.uninstall.title=Ukloni %S
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description=Želite li ukloniti %S?
+webapps.uninstall.uninstall=Ukloni aplikaciju
+webapps.uninstall.dontuninstall=Nemoj ukloniti
 
 paymentDialog.title=Plaćanje
 paymentDialog.message=Kojeg pružatelja usluge plaćanja želite koristiti?
