--- a/hr/browser/chrome/browser/browser.properties
+++ b/hr/browser/chrome/browser/browser.properties
@@ -74,7 +74,6 @@ lwthemeInstallRequest.allowButton.accesskey=D
 
 lwthemePostInstallNotification.message=Nova tema je instalirana.
 lwthemePostInstallNotification.undoButton=Vrati
-lwthemePostInstallNotification.undoButton.accesskey=V
 lwthemePostInstallNotification.manageButton=Uređivanje tema…
 lwthemePostInstallNotification.manageButton.accesskey=U
 
@@ -97,6 +96,9 @@ popupBlock=Blokiraj skočne prozore za %S
 popupWarningDontShowFromMessage=Ne prikazuj ovu poruku kod blokiranja skočnih prozora
 popupWarningDontShowFromLocationbar=Ne prikazuj informacijsku traku pri blokiranju skočnih prozora
 popupShowPopupPrefix=Prikaži '%S'
+
+# Bad Content Blocker Doorhanger Notification
+# %S is brandShortName
 
 # missing plugin installer
 installPlugin.message = Želite li instalirati priključak potreban za prikaz sadržaja na ovoj stranici?
@@ -444,6 +446,7 @@ webapps.install.accesskey = I
 webapps.requestInstall = Želite li s ove stranice (%2$S) instalirati "%1$S"?
 webapps.install.success = Aplikacija je instalirana
 webapps.install.inprogress = Instalacija u tijeku
+#LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S se prikazuje preko cijelog zaslona.
@@ -505,9 +508,13 @@ getUserMedia.shareScreen.message = Želite li podijeliti svoj ekran sa %S?
 getUserMedia.shareCameraAndMicrophone.message = Želite li podijeliti svoju kameru i mikrofon sa %S?
 getUserMedia.shareScreenAndMicrophone.message = Želite li podijeliti svoj mikrofon i ekran sa %S?
 getUserMedia.noVideo.label = Bez videa
-getUserMedia.noWindowOrScreen.label = Ni prozor, ni ekran
 getUserMedia.noAudio.label = Bez zvuka
 getUserMedia.shareEntireScreen.label = Cijeli ekran
+# LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
+# Semicolon-separated list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# Replacement for #1 is the name of the application.
+# Replacement for #2 is the number of windows currently displayed by the application.
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -533,13 +540,19 @@ getUserMedia.continueSharing.accesskey = i
 getUserMedia.stopSharing.label = Zaustavi dijeljenje
 getUserMedia.stopSharing.accesskey = Z
 
-# Mixed Content Blocker Doorhanger Notification
-# LOCALIZATION NOTE - %S is brandShortName
-mixedContentBlocked.message = %S je blokirao nesiguran sadržaj.
-mixedContentBlocked.keepBlockingButton.label = Nastavi blokirati
-mixedContentBlocked.keepBlockingButton.accesskey = b
-mixedContentBlocked.unblock.label = Onemogući zaštitu na ovoj stranici
-mixedContentBlocked.unblock.accesskey = z
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
+#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+#                    getUserMedia.sharingMenuCameraMicrophone,
+#                    getUserMedia.sharingMenuCameraMicrophoneApplication,
+#                    getUserMedia.sharingMenuCameraMicrophoneScreen,
+#                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuMicrophoneApplication,
+#                    getUserMedia.sharingMenuMicrophoneScreen,
+#                    getUserMedia.sharingMenuMicrophoneWindow):
+# %S is the website origin (e.g. www.mozilla.org)
+# LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
+# origin for the sharing menu if no readable origin could be deduced from the URL.
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = Čini se da se %S sporo otvara.
