--- a/hr/browser/chrome/browser/webrtcIndicator.properties
+++ b/hr/browser/chrome/browser/webrtcIndicator.properties
@@ -26,11 +26,24 @@ webrtcIndicator.sharingMicrophoneWith.menuitem = Dijeljenje mikrofona sa "%S"
 webrtcIndicator.sharingScreenWith.menuitem = Dijeljenje ekrana sa "%S"
 webrtcIndicator.sharingWindowWith.menuitem = Dijeljenje prozora sa "%S"
 webrtcIndicator.controlSharing.menuitem = Upravljanje dijeljenjem
-# LOCALIZATION NOTE (webrtcIndicator.sharing*WithNTabs.menuitem):
-# Semicolon-separated list of plural forms.
+# LOCALIZATION NOTE (webrtcIndicator.sharingCameraWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingCameraWithNTabs.menuitem = Dijeljenje kamere s #1 karticom;Dijeljenje kamere sa #1 kartice;Dijeljenje kamere sa #1 kartica
+# LOCALIZATION NOTE (webrtcIndicator.sharingMicrophoneWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Dijeljenje mikrofona s #1 karticom;Dijeljenje mikrofona sa #1 kartice;Dijeljenje mikrofona sa #1 kartica\u0020
+# LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingScreenWithNTabs.menuitem = Dijeljenje ekrana s #1 karticom;Dijeljenje ekrana sa #1 kartice;Dijeljenje ekrana sa #1 kartica
+# LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingWindowWithNTabs.menuitem = Dijeljenje prozora s #1 karticom;Dijeljenje prozora sa #1 kartice;Dijeljenje prozora sa #1 kartica\u0020
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
