--- a/es-MX/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/es-MX/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -98,4 +98,4 @@ quit-button.tooltiptext.linux2 = Salir de %1$S (%2$S)
 quit-button.tooltiptext.mac = Salir de %1$S (%2$S)
 
 panic-button.label = Olvidar
-panic-button.tooltiptext = Olvidar el historial del navegador
+panic-button.tooltiptext = Olvidar el historial de navegación
