browser update 6 for aurora 34

--- a/fy-NL/browser/chrome/browser/loop/loop.properties
+++ b/fy-NL/browser/chrome/browser/loop/loop.properties
@@ -208,7 +208,7 @@ call_progress_connecting_description=Ferbine…
 call_progress_ringing_description=Belle…
 
 peer_ended_conversation2=De persoan dy't jo belle hat it petear beëinige.
-call_has_ended=Jo petear is beëinige.
+conversation_has_ended=Jo petear is beëinige.
 restart_call=Opnij ferbine
 
 generic_failure_title=Der gie wat mis.
