--- a/fy-NL/browser/chrome/browser/newTab.properties
+++ b/fy-NL/browser/chrome/browser/newTab.properties
@@ -5,6 +5,26 @@
 newtab.pin=Dizze webstee op de aktuele posysje fêstpinne
 newtab.unpin=Dizze webstee loskeppelje
 newtab.block=Dizze webstee fuortsmite
-newtab.show=De nije ljepblêdside toane
-newtab.hide=De nije ljepblêdside ferstoppe
-newtab.sponsored=Toan ynformaasje op sponsore tegels
+# LOCALIZATION NOTE(newtab.sponsored.button): This text appears for sponsored
+# and enhanced tiles on the same line as the tile's title, so prefer short
+# strings to avoid overlap. This string should be uppercase.
+newtab.sponsored.button=SPONSORE
+# LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
+# the (X) block icon. %2$S will be replaced by an active link using string
+# newtab.learn.link as text.
+newtab.sponsored.explain=Dizze tegel wurdt jo toand út namme fan in partner fan Mozilla. Jo kin it op elts momint fuortsmite troch te klikken op de %1$S-knop. %2$S
+# LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window. %2$S will be replaced by
+# an active link using string newtab.learn.link as text.
+newtab.enhanced.explain=In partner fan Mozilla hat dizze tegel fisueel ferbetter, troch de skermôfdruk. Jo kinne ferbettere tegels útskeakelje troch te klikken op de %1$S-knop nei jo foarkarren. %2$S
+# LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
+# active link using string newtab.learn.link as text.
+newtab.intro.paragraph1=As jo in nij ljepblêd iepenje, sille jo tegels sjen fan de sites dyý jo geregeld besykje, tegearre mei tegels wêrfan't wy tinke dat dy jo ynteressearje kinne. In pear fan dizze tegels kinne sponsore wêze troch partners fan Mozilla. Wy sille altyd oan jo oanjaan hokker tegels sponsore binne. %1$S
+# LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
+# active link using string newtab.privacy.link as text.
+newtab.intro.paragraph2=Om dizze tsjinst te leverjen, sammelt en brûkt Mozilla bepaalde analytyske ynformaasje relatearre oan jo gebrûk fan de tegels neffens ús %1$S.
+# LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
+# the gear icon used to customize the new tab window.
+newtab.intro.paragraph3=Jo kinne de tegelfunksjonaliteit útskeakelje troch te klikken op de %1$S-knop nei jo foarkarren.
+newtab.learn.link=Lês mear…
+newtab.privacy.link=Privacybelied
