webapprt update 1 for aurora 34

--- a/fy-NL/webapprt/webapprt/webapp.properties
+++ b/fy-NL/webapprt/webapprt/webapp.properties
@@ -40,6 +40,14 @@ webapps.install.title=%S ynstallearje
 webapps.install.description=Wolle jo %S ynstallearje?
 webapps.install.install=App ynstallearje
 webapps.install.dontinstall=Net ynstallearje
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+webapps.uninstall.title=%S de-ynstallearje
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description=Wolle jo %S de-ynstallearje?
+webapps.uninstall.uninstall=App de-ynstallearje
+webapps.uninstall.dontuninstall=Net de-ynstallearje
 
-paymentDialog.title=Betaling
-paymentDialog.message=Hokker betaalprovider wolle jo brûke?
+paymentDialog.title=Betelling
+paymentDialog.message=Hokker betelprovider wolle jo brûke?
