browser update 7 for aurora 34

--- a/fy-NL/browser/chrome/browser/preferences/preferences.properties
+++ b/fy-NL/browser/chrome/browser/preferences/preferences.properties
@@ -94,6 +94,7 @@ cookiesAll=De folgjende cookies binne op jo kompjûter bewarre:
 cookiesFiltered=De folgjende cookies komme oerien mei jo sykaksje:
 
 #### Offline apps
+offlineAppsList.height=7em
 offlineAppRemoveTitle=Bewarre websteegegevens fuortsmite
 offlineAppRemovePrompt=As jo dizze gegevens fuortsmite, sil %S net beskikber wêze as jo gjin ferbining hawwe. Wiite jo seker dat jo dizze bewarre gegevens fuortsmite wolle?
 offlineAppRemoveConfirm=Bewarre gegevens fuortsmite
