--- a/fy-NL/browser/chrome/browser/quitDialog.properties
+++ b/fy-NL/browser/chrome/browser/quitDialog.properties
@@ -10,3 +10,4 @@ saveTitle=&Bewarje en ôfslute
 neverAsk2=&Freegje de folgjende kear net wer
 message=Wolle jo dat %S jo ljepblêden en skermen bewarret foar de folgjende kear as it start?
 messageNoWindows=Wolle jo dat %S jo ljepblêden bewarret foar de folgjende kear as it start?
+messagePrivate=Jo binne yn priveenavigaasje. %S no ôfslute sil al jo iepen ljepblêden en finsters slute.
