--- a/fy-NL/browser/chrome/browser/shellservice.properties
+++ b/fy-NL/browser/chrome/browser/shellservice.properties
@@ -2,12 +2,22 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-optionsLabel=%S-&opsjes
-safeModeLabel=%S &Feilige modus
-setDefaultBrowserTitle=Standertbrowser
-setDefaultBrowserMessage=%S is no net as jo standertbrowser ynsteld. Wolle jo dizze no as jo standertbrowser ynstelle?
-setDefaultBrowserDontAsk=Ek wylst de folgjende kear kontrolearje as %S start.
-alreadyDefaultBrowser=%S is al ynsteld as jo standertbrowser.
-desktopBackgroundLeafNameWin=b\u00FArobl\u00EAdeftergr\u00FBn.bmp
-DesktopBackgroundDownloading=Ofbylding bewarje...
-DesktopBackgroundSet=B\u00FArobl\u00EAdeftergr\u00FBn ynstelle
+optionsLabel                       = %S-&opsjes
+safeModeLabel                      = %S &Feilige moadus
+
+# LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
+# %S will be replaced by brandShortName
+setDefaultBrowserMessage2          = Helje it measte út %S troch it yn te stellen as jo standertbrowser
+setDefaultBrowserConfirm.label     = Brûk %S as myn standertbrowser
+setDefaultBrowserConfirm.accesskey = B
+setDefaultBrowserOptions.label     = Opsjes
+setDefaultBrowserOptions.accesskey = O
+setDefaultBrowserNotNow.label      = No net
+setDefaultBrowserNotNow.accesskey  = N
+setDefaultBrowserNever.label       = Freegje my net wer
+setDefaultBrowserNever.accesskey   = F
+
+
+desktopBackgroundLeafNameWin       = buroblêdachtergrûn.bmp
+DesktopBackgroundDownloading       = Ofbylding bewarje…
+DesktopBackgroundSet               = Buroblêdachtergrûn ynstelle
