--- a/fy-NL/browser/chrome/browser/webrtcIndicator.properties
+++ b/fy-NL/browser/chrome/browser/webrtcIndicator.properties
@@ -26,11 +26,25 @@ webrtcIndicator.sharingMicrophoneWith.menuitem = Mikrofoan dield mei "%S"
 webrtcIndicator.sharingScreenWith.menuitem = Skerm dield mei "%S"
 webrtcIndicator.sharingWindowWith.menuitem = Finster dield mei "%S"
 webrtcIndicator.controlSharing.menuitem = Dielen beheare
-# LOCALIZATION NOTE (webrtcIndicator.sharing*WithNTabs.menuitem):
-# Semicolon-separated list of plural forms.
+# LOCALIZATION NOTE (webrtcIndicator.sharingCameraWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingCameraWithNTabs.menuitem = Kamera dield mei #1 ljepblêd;Kamera dield mei #1 ljepblêden
+# LOCALIZATION NOTE (webrtcIndicator.sharingMicrophoneWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Mikrofoan dield mei #1 ljepblêd;Mikrofoan dield mei #1 ljepblêden
+# LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = In applikaasje dield mei #1 ljepblêdb;Applikaasjes dield mei #1 ljepblêden
+# LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingScreenWithNTabs.menuitem = Skerm dield mei #1 ljepblêd;Skerm dield mei #1 ljepblêden
+# LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
+# Semicolon-separated list of plural forms. See:
+# http://developer.mozilla.org/en/docs/Localization_and_Plurals
 webrtcIndicator.sharingWindowWithNTabs.menuitem = Finster dield mei #1 ljepblêd;Finster dield mei #1 ljepblêden
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
