--- a/he/browser/chrome/browser/migration/migration.properties
+++ b/he/browser/chrome/browser/migration/migration.properties
@@ -29,7 +29,7 @@ importedSafariReadingList=רשימת קריאה (מ־Safari)
 4_ie=היסטוריית דפדוף
 4_safari=היסטוריית דפדוף
 4_chrome=היסטורית גלישה
-4_firefox_history_and_bookmarks=היסטורית גלישה וסימניות
+4_firefox_history_and_bookmarks=היסטוריית גלישה וסימניות
 
 8_ie=היסטוריית טפסים שמורים
 8_safari=היסטוריית טפסים שמורים
