[es-MX] update from Pootle (firefox)

--- a/es-MX/browser/chrome/browser/devtools/webide.properties
+++ b/es-MX/browser/chrome/browser/devtools/webide.properties
@@ -52,7 +52,12 @@ addons_adb_warning=Los dispositivos USB no serán detectados sin este complement
 addons_status_unknown=?
 addons_status_installed=Instalado
 addons_status_uninstalled=No instalado
+addons_status_preparing=preparando
+addons_status_downloading=descargando
+addons_status_installing=instalando
 
+runtimedetails_checkno=no
+runtimedetails_checkyes=sí
 runtimedetails_checkunkown=desconocido
 runtimedetails_notUSBDevice=No es un dispositivo USB
 
