--- a/es-MX/browser/chrome/browser/loop/loop.properties
+++ b/es-MX/browser/chrome/browser/loop/loop.properties
@@ -56,10 +56,17 @@ share_email_subject3=Haz sido invitado a una conversación
 ## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
 share_email_body3=Para aceptar esta invitación, sólo copia o haz clic en este enlace para iniciar tu conversación: \n\n{{callUrl}}
+share_button=Correo electrónico
 copy_url_button=Copiar
+copied_url_button=¡Se copío!
 
+panel_footer_signin_or_signup_link=Ingresar o Registarse
 
+settings_menu_item_account=Cuenta
+settings_menu_item_settings=Configuración
+settings_menu_item_signout=Desconectarse
 settings_menu_item_signin=Iniciar sesión
+settings_menu_button_tooltip=Configuración
 
 # Contact Strings (Panel)
 
@@ -109,12 +116,15 @@ import_failed_description_simple=Lo siento, no se puede importar contacto
 ## This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 import_failed_description=Lo siento, no se puede importar contacto, por favor mira nuestra {{import_failed_support_link_label}} para ayuda
+import_failed_support_link_label=sitio de soporte
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
+remove_contact_menu_button=Eliminar Contacto
 ## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
 ## to confirm deletion of a contact.
+confirm_delete_contact_alert=¿Realmente quieres eliminar este contacto?
 ## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
 ## These are displayed on the alert with confirm_delete_contact_alert
 confirm_delete_contact_remove_button=Eliminar contacto
@@ -184,14 +194,21 @@ call_with_contact_title=Conversación con {{contactName}}
 
 outgoing_call_title=¿Iniciar conversación?
 initiate_audio_video_call_button2=Empezar
+initiate_audio_video_call_tooltip2=Comenzar una conversación de vídeo
+initiate_audio_call_button2=Conversación de video
+initiate_call_cancel_button=Cancelar
 
 ## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
 ## whilst the client is contacting the client at the other end of the connection
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_connecting_description=Conectando…
 ## LOCALIZATION NOTE (call_progress_ringing_description): This is displayed
 ## when the other client is actually ringing.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_ringing_description=Sonando...
 
+peer_ended_conversation2=La persona a quién llamaste terminó la conversación.
+conversation_has_ended=Se terminó la conversación.
 restart_call=Volver a unirse
 
 generic_failure_title=Algo salió mal.
@@ -225,7 +242,10 @@ connection_error_see_console_notification=La llamada falló; ve la consola para 
 legal_text_and_links3=Al usar {{clientShortname}} aceptas los {{terms_of_use}} \\ y el {{privacy_notice}}.
 legal_text_tos = Términos de uso
 legal_text_privacy = Política de privacidad
+client_shortname_fallback=este producto
 
+feedback_call_experience_heading2=¿Qué te pareció la conversación?
+feedback_what_makes_you_sad=¿Qué cosas te ponen triste?
 feedback_thank_you_heading=¡Gracias por tu opinión!
 feedback_category_audio_quality=Calidad del sonido
 feedback_category_video_quality=Calidad del video
