--- a/es-MX/browser/chrome/browser/lightweightThemes.properties
+++ b/es-MX/browser/chrome/browser/lightweightThemes.properties
@@ -6,7 +6,10 @@ lightweightThemes.recommended-1.name=A Web Browser Renaissance
 lightweightThemes.recommended-1.description=A Web Browser Renaissance es (C) de Sean.Martell. Disponible bajo CC-BY-SA. Sin garantía.
 
 lightweightThemes.recommended-2.name=Space Fantasy
+lightweightThemes.recommended-2.description=Space Fantacy es (C) de fx5800p. Disponable bajo CC-BY-SA. Sin garantía.
 
+lightweightThemes.recommended-3.name=Linen Light
+lightweightThemes.recommended-3.description=Linen Light es (C) de DVemer. Disponible bajo CC-BY-SA. Sin garantía.
 
 lightweightThemes.recommended-4.name=Pastel Gradient
 lightweightThemes.recommended-4.description=Pastel Gradient es (C) de darrinhenein. Disponible bajo CC-BY. Sin garantía.
