[xh] update from Pootle (firefox)

--- a/xh/dom/chrome/accessibility/AccessFu.properties
+++ b/xh/dom/chrome/accessibility/AccessFu.properties
@@ -220,7 +220,15 @@ sliderAbbr         =       isilayida
 spinbuttonAbbr     =       iqhosa lokujikelezisa
 diagramAbbr        =       idayagram
 animationAbbr      =       uhombiso
+equationAbbr       =       ulinganiselo
+buttonmenuAbbr     =       imenyu yeqhosha
+whitespaceAbbr     =       indawo emhlophe
+pagetablistAbbr    =       uluhlu lwethebhu
+canvasAbbr         =       ikhanvasi
+checkmenuitemAbbr  =       khangela iayithem yemenyu
+labelAbbr          =       ileyibhile
 passwordtextAbbr   =       i-passwdtxt
+radiomenuitemAbbr  =       iayithem yemenyu kanomathotholo
 textcontainerAbbr  =       isigcini sombhalo
 togglebuttonAbbr   =       iqhosha le-toggle
 treetableAbbr      =       itheyibhile yomthi
@@ -230,6 +238,7 @@ paragraphAbbr      =       umhlathi
 entryAbbr          =       ufakelo
 captionAbbr        =       ikhepshini
 headingAbbr        =       Isihloko
+sectionAbbr        =       icandelo
 formAbbr           =       ifomu
 comboboxlistAbbr   =       uludwe lweebhokisi zekhombo
 comboboxoptionAbbr =       ukhetho kwibhokisi yekhombo
