some devtools translations

--- a/ga-IE/browser/chrome/browser/browser.properties
+++ b/ga-IE/browser/chrome/browser/browser.properties
@@ -552,15 +552,15 @@ getUserMedia.never.accesskey = N
 getUserMedia.sharingCamera.message2 = Tá tú ag roinnt do cheamara leis an leathanach seo faoi láthair.
 getUserMedia.sharingMicrophone.message2 = Tá tú ag roinnt do mhicreafóin leis an leathanach seo faoi láthair.
 getUserMedia.sharingCameraAndMicrophone.message2 = Tá tú ag roinnt do cheamara agus do mhicreafóin leis an leathanach seo faoi láthair.
-getUserMedia.sharingApplication.message = You are currently sharing an application with this page.
-getUserMedia.sharingScreen.message = You are currently sharing your screen with this page.
-getUserMedia.sharingWindow.message = You are currently sharing a window with this page.
+getUserMedia.sharingApplication.message = Tá tú ag comhroinnt feidhmchláir leis an leathanach seo faoi láthair.
+getUserMedia.sharingScreen.message = Tá tú ag comhroinnt do scáileáin leis an leathanach seo faoi láthair.
+getUserMedia.sharingWindow.message = Tá tú ag comhroinnt fuinneoige leis an leathanach seo faoi láthair.
 getUserMedia.continueSharing.label = Lean ar aghaidh ag comhroinnt
 getUserMedia.continueSharing.accesskey = C
 getUserMedia.stopSharing.label = Stop Comhroinnt
 getUserMedia.stopSharing.accesskey = S
 
-getUserMedia.sharingMenu.label = Tabs sharing devices
+getUserMedia.sharingMenu.label = Cluaisíní atá ag comhroinnt gléasanna
 getUserMedia.sharingMenu.accesskey = d
 # LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
 #                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
@@ -600,6 +600,6 @@ slowStartup.disableNotificationButton.accesskey = A
 # LOCALIZATION NOTE(customizeTips.tip0): %1$S will be replaced with the text defined
 # in customizeTips.tip0.hint, %2$S will be replaced with brandShortName, %3$S will
 # be replaced with a hyperlink containing the text defined in customizeTips.tip0.learnMore.
-customizeTips.tip0 = %1$S: You can customize %2$S to work the way you do. Simply drag any of the above to the menu or toolbar. %3$S about customizing %2$S.
+customizeTips.tip0 = %1$S: Tig leat %2$S a chur in oiriúint do do mhodh oibre. Ní gá ach ceann de na rudaí thuas a tharraingt go dtí an roghchlár nó an barra uirlisí. %3$S faoi %2$S a shaincheapadh.
 customizeTips.tip0.hint = Leid
 customizeTips.tip0.learnMore = Tuilleadh eolais
