--- a/ga-IE/browser/chrome/browser/devtools/app-manager.properties
+++ b/ga-IE/browser/chrome/browser/devtools/app-manager.properties
@@ -15,7 +15,7 @@ project.installing=Á Shuiteáil…
 project.installed=Suiteáilte!
 validator.nonExistingFolder=Níl fillteán an tionscadail ann
 validator.expectProjectFolder=Is comhad é fillteán an tionscadail, tar éis an tsaoil
-validator.wrongManifestFileName=Packaged apps require a manifest file that can only be named 'manifest.webapp' at project root folder
+validator.wrongManifestFileName=Ní mór lastliosta a bheith i ngach aip phacáistithe, ina príomhfhillteán, leis an ainm 'manifest.webapp'
 validator.invalidManifestURL=URL neamhbhailí lastliosta '%S'
 # LOCALIZATION NOTE (validator.invalidManifestJSON, validator.noAccessManifestURL):
 # %1$S is the error message, %2$S is the URI of the manifest.
@@ -29,7 +29,7 @@ validator.invalidProjectType=Cineál anaithnid tionscadail: '%S'
 # don't translate 'icons' and 'name'.
 validator.missNameManifestProperty=Réimse riachtanach 'name' ar iarraidh sa lastliosta.
 validator.missIconsManifestProperty=Réimse 'icons' ar iarraidh sa lastliosta.
-validator.missIconMarketplace2=app submission to the Marketplace requires a 128px icon
+validator.missIconMarketplace2=Ní mór deilbhín 128pct a sholáthar chun aip a dháileadh san Áit Mhargaidh
 validator.invalidAppType=Cineál anaithnid aipe: '%S'.
 validator.invalidHostedPriviledges=Ní cheadaítear aip óstáilte de chineál '%S'.
 validator.noCertifiedSupport='certified' apps are not fully supported on the App manager.
