--- a/ga-IE/browser/chrome/browser/devtools/canvasdebugger.properties
+++ b/ga-IE/browser/chrome/browser/devtools/canvasdebugger.properties
@@ -26,7 +26,7 @@ ToolboxCanvasDebugger.tooltip=Uirlisí chun comhthéacsanna <canvas> a scrúdú 
 
 # LOCALIZATION NOTE (noSnapshotsText): The text to display in the snapshots menu
 # when there are no recorded snapshots yet.
-noSnapshotsText=There are no snapshots yet.
+noSnapshotsText=Níl aon roghbhlúirí agat fós.
 
 # LOCALIZATION NOTE (snapshotsList.itemLabel):
 # This string is displayed in the snapshots list of the Canvas Debugger,
@@ -69,7 +69,7 @@ snapshotsList.saveDialogAllFilter=Gach Comhad
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # This string is displayed in the snapshots list of the Canvas Debugger,
 # as a generic description about how many draw calls were made.
-snapshotsList.drawCallsLabel=#1 draw;#1 draws
+snapshotsList.drawCallsLabel=Deartha uair amháin;Deartha #1 uair;Deartha #1 huaire;Deartha #1 n-uaire;Deartha #1 uair
 
 # LOCALIZATION NOTE (snapshotsList.functionCallsLabel):
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
