--- a/ga-IE/browser/chrome/browser/devtools/debugger.properties
+++ b/ga-IE/browser/chrome/browser/devtools/debugger.properties
@@ -17,7 +17,7 @@ ToolboxDebugger.label=Dífhabhtóir
 
 # LOCALIZATION NOTE (ToolboxDebugger.panelLabel):
 # This is used as the label for the toolbox panel.
-ToolboxDebugger.panelLabel=Debugger Panel
+ToolboxDebugger.panelLabel=Painéal an Dífhabhtóra
 
 # LOCALIZATION NOTE (DebuggerWindowTitle):
 # The title displayed for the debugger window.
