--- a/ga-IE/browser/chrome/browser/devtools/inspector.properties
+++ b/ga-IE/browser/chrome/browser/devtools/inspector.properties
@@ -39,7 +39,7 @@ inspector.accesskey=I
 
 # LOCALIZATION NOTE (inspector.panelLabel.*)
 # Labels applied to the panel and views within the panel in the toolbox
-inspector.panelLabel=Inspector Panel
+inspector.panelLabel=Painéal an Scrúdaitheora
 inspector.panelLabel.markupView=Markup View
 
 # LOCALIZATION NOTE (markupView.more.*)
@@ -53,4 +53,4 @@ inspector.tooltip=Scrúdaitheoir DOM agus Stíle
 previewTooltip.image.brokenImage=Níorbh fhéidir an íomhá a luchtú
 
 #LOCALIZATION NOTE: Used in the image preview tooltip when the image could not be loaded
-eventsTooltip.openInDebugger=Open in Debugger
+eventsTooltip.openInDebugger=Oscail sa Dífhabhtóir
