--- a/ga-IE/browser/chrome/browser/devtools/netmonitor.properties
+++ b/ga-IE/browser/chrome/browser/devtools/netmonitor.properties
@@ -17,7 +17,7 @@ netmonitor.label=Líonra
 
 # LOCALIZATION NOTE (netmonitor.panelLabel):
 # This is used as the label for the toolbox panel.
-netmonitor.panelLabel=Network Panel
+netmonitor.panelLabel=Painéal Líonra
 
 # LOCALIZATION NOTE (netmonitor.commandkey, netmonitor.accesskey)
 # Used for the menuitem in the tool menu
