--- a/ga-IE/browser/chrome/browser/devtools/storage.properties
+++ b/ga-IE/browser/chrome/browser/devtools/storage.properties
@@ -24,17 +24,17 @@ storage.label=Stóras
 # LOCALIZATION NOTE (storage.menuLabel):
 # This string is displayed in the Tools menu as a shortcut to open the devtools
 # with the Storage Inspector tab selected.
-storage.menuLabel=Storage Inspector
+storage.menuLabel=Iniúchóir Stórais
 
 # LOCALIZATION NOTE (storage.panelLabel):
 # This string is used as the aria-label for the iframe of the Storage Inspector
 # tool in developer tools toolbox.
-storage.panelLabel=Storage Panel
+storage.panelLabel=Painéal Stórais
 
 # LOCALIZATION NOTE (storage.tooltip):
 # This string is displayed in the tooltip of the tab when the storage editor is
 # displayed inside the developer tools window.
-storage.tooltip2=Storage Inspector (Cookies, Local Storage …)
+storage.tooltip2=Iniúchóir Stórais (Fianáin, Stóras Áitiúil…)
 
 # LOCALIZATION NOTE (tree.emptyText):
 # This string is displayed when the Storage Tree is empty. This can happen when
@@ -50,8 +50,8 @@ table.emptyText=No data present for selected host
 # These strings are the labels for Storage type groups present in the Storage
 # Tree, like cookies, local storage etc.
 tree.labels.cookies=Fianáin
-tree.labels.localStorage=Local Storage
-tree.labels.sessionStorage=Session Storage
+tree.labels.localStorage=Stóras Áitiúil
+tree.labels.sessionStorage=Stóras Seisiúin
 tree.labels.indexedDB=Indexed DB
 
 # LOCALIZATION NOTE (table.headers.*.*):
@@ -60,9 +60,9 @@ tree.labels.indexedDB=Indexed DB
 table.headers.cookies.name=Ainm
 table.headers.cookies.path=Conair
 table.headers.cookies.host=Fearann
-table.headers.cookies.expires=Expires on
+table.headers.cookies.expires=In éag ar
 table.headers.cookies.value=Luach
-table.headers.cookies.lastAccessed=Last accessed on
+table.headers.cookies.lastAccessed=Úsáidte ar
 table.headers.cookies.creationTime=Cruthaithe
 # LOCALIZATION NOTE (table.headers.cookies.isHttpOnly):
 # This string is used in the header for the column which denotes whether a
@@ -91,7 +91,7 @@ table.headers.indexedDB.origin=Foinse
 table.headers.indexedDB.version=Leagan
 table.headers.indexedDB.objectStores=Object Stores
 table.headers.indexedDB.keyPath=Eochair
-table.headers.indexedDB.autoIncrement=Auto Increment
+table.headers.indexedDB.autoIncrement=Uathincrimint
 table.headers.indexedDB.indexes=Innéacsanna
 
 # LOCALIZATION NOTE (label.expires.session):
@@ -101,7 +101,7 @@ label.expires.session=Seisiún
 
 # LOCALIZATION NOTE (storage.search.placeholder):
 # This is the placeholder text in the sidebar search box
-storage.search.placeholder=Filter values
+storage.search.placeholder=Scag luachanna
 
 # LOCALIZATION NOTE (storage.data.label):
 # This is the heading displayed over the item value in the sidebar
