--- a/ga-IE/browser/chrome/browser/devtools/gcli.properties
+++ b/ga-IE/browser/chrome/browser/devtools/gcli.properties
@@ -54,7 +54,7 @@ cliOptions=Roghanna
 cliUnknownCommand=Ordú Neamhbhailí
 
 # LOCALIZATION NOTE: A parameter should have a value, but doesn't
-cliIncompleteParam=Value required for '%1$S'.
+cliIncompleteParam=Ní mór luach a chur le '%1$S'.
 
 # LOCALIZATION NOTE: Error message given when a file argument points to a file
 # that does not exist, but should (e.g. for use with File->Open) %1$S is a
@@ -179,7 +179,7 @@ subCommands=Fo-orduithe
 
 # LOCALIZATION NOTE: This error message is displayed when the command line is
 # cannot find a match for the parse types.
-commandParseError=Command line parsing error
+commandParseError=Earráid agus líne na n-orduithe á parsáil
 
 # LOCALIZATION NOTE (contextDesc, contextManual, contextPrefixDesc): These
 # strings are used to describe the 'context' command and its 'prefix'
@@ -241,7 +241,7 @@ clearDesc=Bánaigh an limistéir aschurtha
 
 # LOCALIZATION NOTE (langDesc, langOutput): These strings describe the 'lang'
 # command and its parameters
-langDesc=Enter commands in different languages
+langDesc=Cuir orduithe i dteangacha éagsúla isteach
 langOutput=Tá tú ag úsáid %S anois
 
 # LOCALIZATION NOTE (prefDesc, prefManual, prefListDesc, prefListManual,
