--- a/ga-IE/browser/chrome/browser/devtools/gclicommands.properties
+++ b/ga-IE/browser/chrome/browser/devtools/gclicommands.properties
@@ -132,55 +132,55 @@ screenshotTooltip=Tóg grianghraf den leathanach iomlán
 # 'highlight' command. See highlightManual for a fuller description of what
 # it does. This string is designed to be shown in a menu alongside the
 # command name, which is why it should be as short as possible.
-highlightDesc=Highlight nodes
+highlightDesc=Aibhsigh nóid
 
 # LOCALIZATION NOTE (highlightManual) A fuller description of the 'highlight'
 # command, displayed when the user asks for help on what it does.
-highlightManual=Highlight nodes that match a selector on the page
+highlightManual=Aibhsigh nóid a mheaitseálann roghnóir ar an leathanach
 
 # LOCALIZATION NOTE (highlightSelectorDesc) A very short string to describe
 # the 'selector' parameter to the 'highlight' command, which is displayed in
 # a dialog when the user is using this command.
-highlightSelectorDesc=CSS selector
+highlightSelectorDesc=Roghnóir CSS
 
 # LOCALIZATION NOTE (highlightSelectorManual) A fuller description of the
 # 'selector' parameter to the 'highlight' command, displayed when the user
 # asks for help on what it does.
-highlightSelectorManual=The CSS selector used to match nodes in the page
+highlightSelectorManual=An roghnóir CSS a mheaitseálann nóid ar an leathanach
 
 # LOCALIZATION NOTE (highlightOptionsDesc) The title of a set of options to
 # the 'highlight' command, displayed as a heading to the list of option.
-highlightOptionsDesc=Options
+highlightOptionsDesc=Roghanna
 
 # LOCALIZATION NOTE (highlightHideGuidesDesc) A very short string to describe
 # the 'hideguides' option parameter to the 'highlight' command, which is
 # displayed in a dialog when the user is using this command.
-highlightHideGuidesDesc=Hide guides
+highlightHideGuidesDesc=Folaigh na treoirlínte
 
 # LOCALIZATION NOTE (highlightHideGuidesManual) A fuller description of the
 # 'hideguides' option parameter to the 'highlight' command, displayed when the
 # user asks for help on what it does.
-highlightHideGuidesManual=Hide the guides around the highlighted node
+highlightHideGuidesManual=Ná taispeáin na treoirlínte timpeall an nóid aibhsithe
 
 # LOCALIZATION NOTE (highlightShowInfoBarDesc) A very short string to describe
 # the 'showinfobar' option parameter to the 'highlight' command, which is
 # displayed in a dialog when the user is using this command.
-highlightShowInfoBarDesc=Show the node infobar
+highlightShowInfoBarDesc=Taispeáin barra eolais
 
 # LOCALIZATION NOTE (highlightShowInfoBarManual) A fuller description of the
 # 'showinfobar' option parameter to the 'highlight' command, displayed when the
 # user asks for help on what it does.
-highlightShowInfoBarManual=Show the infobar above the highlighted node (the infobar displays the tagname, attributes and dimension)
+highlightShowInfoBarManual=Taispeáin barra eolais os cionn an nóid aibhsithe (le hainm na clibe, aitreabúidí, agus toisí)
 
 # LOCALIZATION NOTE (highlightShowAllDesc) A very short string to describe
 # the 'showall' option parameter to the 'highlight' command, which is
 # displayed in a dialog when the user is using this command.
-highlightShowAllDesc=Show all matches
+highlightShowAllDesc=Taispeáin gach nód a mheaitseálann
 
 # LOCALIZATION NOTE (highlightShowAllManual) A fuller description of the
 # 'showall' option parameter to the 'highlight' command, displayed when the
 # user asks for help on what it does.
-highlightShowAllManual=If too many nodes match the selector, only the first 100 will be shown to avoid slowing down the page too much. Use this option to show all matches instead
+highlightShowAllManual=De réir réamhshocraithe, má mheaitseálann an roghnóir an iomarca nód, taispeánfar an chéad 100 nód amháin, sa chaoi nach gcuirfidh sé moill ar an leathanach. Úsáid an rogha seo chun gach nód a thaispeáint
 
 # LOCALIZATION NOTE (highlightRegionDesc) A very short string to describe the
 # 'region' option parameter to the 'highlight' command, which is displayed in a
@@ -195,7 +195,7 @@ highlightRegionManual=Which box model region should be highlighted: 'content', '
 # LOCALIZATION NOTE (highlightFillDesc) A very short string to describe the
 # 'fill' option parameter to the 'highlight' command, which is displayed in a
 # dialog when the user is using this command.
-highlightFillDesc=Fill style
+highlightFillDesc=Stíl líonta
 
 # LOCALIZATION NOTE (highlightFillManual) A fuller description of the 'fill'
 # option parameter to the 'highlight' command, displayed when the user asks for
@@ -216,7 +216,7 @@ highlightKeepManual=By default, existing highlighters are hidden when running th
 # 'highlight' command, displayed to the user once the command has been entered,
 # informing the user how many nodes have been highlighted successfully and how
 # to turn highlighting off
-highlightOutputConfirm=%1$S nodes highlighted
+highlightOutputConfirm=%1$S nód aibhsithe
 
 # LOCALIZATION NOTE (highlightOutputMaxReached) A confirmation message for the
 # 'highlight' command, displayed to the user once the command has been entered,
@@ -268,7 +268,7 @@ inspectManual=Scrúdaigh toisí agus airíonna eiliminte trí roghnóir CSS a ú
 # LOCALIZATION NOTE (inspectNodeDesc) A very short string to describe the
 # 'node' parameter to the 'inspect' command, which is displayed in a dialog
 # when the user is using this command.
-inspectNodeDesc=CSS selector
+inspectNodeDesc=Roghnóir CSS
 
 # LOCALIZATION NOTE (inspectNodeManual) A fuller description of the 'node'
 # parameter to the 'inspect' command, displayed when the user asks for help
@@ -1502,25 +1502,25 @@ mediaResetDesc=Stad aithris ar mheán CSS a thuilleadh
 # LOCALIZATION NOTE (injectDesc, injectManual, injectLibraryDesc, injectLoaded,
 # injectFailed) These strings describe the 'inject' commands and all available
 # parameters.
-injectDesc=Inject common libraries into the page
+injectDesc=Ionsáigh leabharlanna coitianta sa leathanach
 injectManual2=Inject common libraries into the content of the page which can also be accessed from the console.
 injectLibraryDesc=Select the library to inject or enter a valid script URI to inject
-injectLoaded=%1$S loaded
-injectFailed=Failed to load %1$S - Invalid URI
+injectLoaded=%1$S luchtaithe
+injectFailed=Níorbh fhéidir %1$S a luchtú - URI neamhbhailí
 
 # LOCALIZATION NOTE (folderDesc, folderOpenDesc, folderOpenDir,
 # folderOpenProfileDesc) These strings describe the 'folder' commands and
 # all available parameters.
-folderDesc=Open folders
+folderDesc=Oscail fillteáin
 folderOpenDesc=Open folder path
 folderOpenDir=Directory Path
 folderOpenProfileDesc=Open profile directory
 
 # LOCALIZATION NOTE (folderInvalidPath) A string displayed as the result
 # of the 'folder open' command with an invalid folder path.
-folderInvalidPath=Please enter a valid path
+folderInvalidPath=Cuir conair bhailí isteach
 
 # LOCALIZATION NOTE (folderOpenDirResult) A very short string used to
 # describe the result of the 'folder open' command.
 # The argument (%1$S) is the folder path.
-folderOpenDirResult=Opened %1$S
+folderOpenDirResult=Osclaíodh %1$S
