--- a/ga-IE/browser/chrome/browser/devtools/profiler.properties
+++ b/ga-IE/browser/chrome/browser/devtools/profiler.properties
@@ -79,7 +79,7 @@ category.events=Ionchur agus Teagmhais
 
 # LOCALIZATION NOTE (table.root):
 # This string is displayed in the call tree for the root node.
-table.root=(root)
+table.root=(fréamh)
 
 # LOCALIZATION NOTE (table.url.tooltiptext):
 # This string is displayed in the call tree as the tooltip text for the url
