--- a/ga-IE/browser/chrome/browser/devtools/scratchpad.properties
+++ b/ga-IE/browser/chrome/browser/devtools/scratchpad.properties
@@ -97,7 +97,7 @@ scratchpad.label=Ceap Breacaireachta
 
 # LOCALIZATION NOTE (scratchpad.panelLabel): this is used as the
 # label for the toolbox panel.
-scratchpad.panelLabel=Scratchpad Panel
+scratchpad.panelLabel=Painéal an Chip Breacaireachta
 
 # LOCALIZATION NOTE (scratchpad.tooltip):  This string is displayed in the
 # tooltip of the tab when the Scratchpad is displayed inside the developer tools
