--- a/sl/browser/chrome/browser/devtools/netmonitor.properties
+++ b/sl/browser/chrome/browser/devtools/netmonitor.properties
@@ -47,11 +47,11 @@ headersFilterText=Išči glave
 
 # LOCALIZATION NOTE (cookiesEmptyText): This is the text displayed in the
 # cookies tab of the network details pane when there are no cookies available.
-cookiesEmptyText=Brez piškotov za to zahtevo
+cookiesEmptyText=Brez piškotkov za to zahtevo
 
 # LOCALIZATION NOTE (cookiesFilterText): This is the text displayed in the
 # cookies tab of the network details pane for the filtering input.
-cookiesFilterText=Išči piškote
+cookiesFilterText=Išči piškotke
 
 # LOCALIZATION NOTE (paramsEmptyText): This is the text displayed in the
 # params tab of the network details pane when there are no params available.
@@ -88,11 +88,11 @@ responseHeaders=Glave odziva
 
 # LOCALIZATION NOTE (requestCookies): This is the label displayed
 # in the network details params tab identifying the request cookies.
-requestCookies=Piškoti zahteve
+requestCookies=Piškotki zahteve
 
 # LOCALIZATION NOTE (responseCookies): This is the label displayed
 # in the network details params tab identifying the response cookies.
-responseCookies=Piškoti odziva
+responseCookies=Piškotki odziva
 
 # LOCALIZATION NOTE (jsonFilterText): This is the text displayed
 # in the response tab of the network details pane for the JSON filtering input.
