--- a/sl/browser/chrome/browser/migration/migration.properties
+++ b/sl/browser/chrome/browser/migration/migration.properties
@@ -21,10 +21,10 @@ importedSafariReadingList=Seznam literature (iz Safarija)
 1_safari=Nastavitve
 1_chrome=Nastavitve
 
-2_ie=Piškoti
-2_safari=Piškoti
-2_chrome=Piškoti
-2_firefox=Piškoti
+2_ie=Piškotki
+2_safari=Piškotki
+2_chrome=Piškotki
+2_firefox=Piškotki
 
 4_ie=Zgodovina brskanja
 4_safari=Zgodovina brskanja
