--- a/sl/browser/chrome/browser/preferences/aboutPermissions.properties
+++ b/sl/browser/chrome/browser/preferences/aboutPermissions.properties
@@ -6,4 +6,4 @@
 visitCount=Število obiskov: #1;Število obiskov: #1
 
 passwordsCount=Število shranjenih gesel za to stran: #1.;Število shranjenih gesel za to stran: #1.
-cookiesCount=Število shranjenih piškotov za to stran: #1.;Število shranjenih piškotov za to stran: #1.
+cookiesCount=Število shranjenih piškotkov za to stran: #1.;Število shranjenih piškotkov za to stran: #1.
