--- a/sl/browser/chrome/browser/sitePermissions.properties
+++ b/sl/browser/chrome/browser/sitePermissions.properties
@@ -7,7 +7,7 @@ allowForSession = Dovoli za to sejo
 block = Zavrni
 alwaysAsk = Vedno vprašaj
 
-permission.cookie.label = Nastavi piškote
+permission.cookie.label = Nastavi piškotke
 permission.desktop-notification.label = Prikaži obvestila
 permission.image.label = Naloži slike
 permission.camera.label = Uporabi kamero
