--- a/sl/toolkit/chrome/cookie/cookieAcceptDialog.properties
+++ b/sl/toolkit/chrome/cookie/cookieAcceptDialog.properties
@@ -12,8 +12,8 @@ showDetails=Prikaži podrobnosti
 hideDetails=Skrij podrobnosti
 detailsAccessKey=T
 
-permissionToSetACookie = Stran %S želi nastaviti piškot.
-permissionToSetSecondCookie = Stran %S želi nastaviti drugi piškot po vrsti.
+permissionToSetACookie = Stran %S želi nastaviti piškotek.
+permissionToSetSecondCookie = Stran %S želi nastaviti drugi piškotek po vrsti.
 #  LOCALIZATION NOTE (PermissionToSetAnotherCookie): First %S: sitename, second %S: number of cookies already present for that site
-permissionToSetAnotherCookie = Stran %S želi dovoljenje za nastavitev še enega piškota.\nTrenutno imate že več (%S) piškotov te strani.
-permissionToModifyCookie = Stran %S želi spremeniti obstoječ piškot.
+permissionToSetAnotherCookie = Stran %S želi dovoljenje za nastavitev še enega piškotka.\nTrenutno imate že več (%S) piškotkov te strani.
+permissionToModifyCookie = Stran %S želi spremeniti obstoječ piškotek.
