--- a/fy-NL/browser/chrome/browser/webrtcIndicator.properties
+++ b/fy-NL/browser/chrome/browser/webrtcIndicator.properties
@@ -12,6 +12,7 @@ webrtcIndicator.windowtitle = %S - Dielyndikator
 webrtcIndicator.sharingCameraAndMicrophone.tooltip = Jo kamera en mikrofoan wurde dield. Klik om dielen te behearen.
 webrtcIndicator.sharingCamera.tooltip              = Jo kamera wurdt dield. Klik om dielen te behearen.
 webrtcIndicator.sharingMicrophone.tooltip          = Jo mikrofoan wurdt dield. Klik om dielen te behearen.
+webrtcIndicator.sharingApplication.tooltip         = In applikaasje wurdt dield. Klik om dielen te behearen.
 webrtcIndicator.sharingScreen.tooltip              = Jo skerm wurdt dield. Klik om dielen te behearen.
 webrtcIndicator.sharingWindow.tooltip              = In finster wurdt dield. Klik om dielen te behearen.
 
@@ -23,6 +24,7 @@ webrtcIndicator.sharingWindow.tooltip              = In finster wurdt dield. Kli
 # %S is the title of the tab using the share.
 webrtcIndicator.sharingCameraWith.menuitem = Kamera dield mei "%S"
 webrtcIndicator.sharingMicrophoneWith.menuitem = Mikrofoan dield mei "%S"
+webrtcIndicator.sharingApplicationWith.menuitem = In applikaasje dield mei "%S"
 webrtcIndicator.sharingScreenWith.menuitem = Skerm dield mei "%S"
 webrtcIndicator.sharingWindowWith.menuitem = Finster dield mei "%S"
 webrtcIndicator.controlSharing.menuitem = Dielen beheare
