--- a/et/security/manager/chrome/pipnss/nsserrors.properties
+++ b/et/security/manager/chrome/pipnss/nsserrors.properties
@@ -4,7 +4,7 @@
 
 SSL_ERROR_EXPORT_ONLY_SERVER=Turvaline ühendus ebaõnnestus.  Partner ei toeta kõrgtaseme krüptimist.
 SSL_ERROR_US_ONLY_SERVER=Turvaline ühendus ebaõnnestus.  Partner nõuab kõrgtasemelist krüptimist, mis ei ole toetatud.
-SSL_ERROR_NO_CYPHER_OVERLAP=Partneriga pole võimalik luua turvalist ühendust: puuduvad üldised krüptoalgoritmid.
+SSL_ERROR_NO_CYPHER_OVERLAP=Partneriga pole võimalik luua turvalist ühendust: puuduvad ühised krüptoalgoritmid.
 SSL_ERROR_NO_CERTIFICATE=Ei leitud autentimiseks vajalikku sertifikaati või võtit.
 SSL_ERROR_BAD_CERTIFICATE=Partneriga pole võimalik luua turvalist ühendust: partneri sertifikaat lükati tagasi.
 SSL_ERROR_UNUSED_5=Tundmatu SSLi veakood.
