--- a/sl/dom/chrome/security/csp.properties
+++ b/sl/dom/chrome/security/csp.properties
@@ -64,7 +64,10 @@ inlineStyleBlocked = Poskus uveljavljanja notranjih slogovnih predlog je bil zav
 scriptFromStringBlocked = Poskus klica JavaScripta iz niza (npr. s pomočjo funkcije eval) je bil zavrnjen
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
-hostNameMightBeKeyword = Interpreting %1$S as a hostname, not a keyword. If you intended this to be a keyword, use '%2$S' (wrapped in single quotes).
+hostNameMightBeKeyword = Upoštevanje %1$S kot ime gostitelja, ne kot ključna beseda. Če želite ključno besedo, uporabite '%2$S' (ovito v enojne narekovaje).
+# LOCALIZATION NOTE (notSupportingDirective):
+# directive is not supported (e.g. 'reflected-xss')
+notSupportingDirective = Pravilo '%1$S' ni podprto, zato bo skupaj z vrednostmi prezrto.
 
 # CSP Errors:
 policyURINotAlone = Navodilo policy-uri se lahko pojavi le samostojno
