--- a/sl/dom/chrome/accessibility/AccessFu.properties
+++ b/sl/dom/chrome/accessibility/AccessFu.properties
@@ -94,11 +94,10 @@ listEnd        =       Zadnji predmet
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 listItemsCount =       1 predmet;Več predmetov (#1)
 
-# LOCALIZATION NOTE: %1$S is the item's role name (e.g. "tab"),
-# %2$S is the position of the item n the set.
-# %3$S is the total number of such items in the set.
-# An expanded example would read "tab 2 of 5".
-objItemOf      =       %1$S %2$S od %3$S
+# LOCALIZATION NOTE: # %1$S is the position of the item n the set.
+# %2$S is the total number of such items in the set.
+# An expanded example would read "2 of 5".
+objItemOfN      =       %1$S od %2$S
 
 # Landmark announcements
 banner         =       banner
@@ -108,17 +107,14 @@ main           =       glavno
 navigation     =       brskanje
 search         =       iskanje
 
-# Description of a table or grid:
-# 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
-# 2 is the number of columns within the table.
-# 3 is the number of rows within the table or grid.
-tableInfo = %S z %S in %S
-# LOCALIZATION NOTE (tableColumnInfo): Semi-colon list of plural forms.
+# LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfo = 1 stolpcem;več stolpci (#1)
-# LOCALIZATION NOTE (tableRowInfo): Semi-colon list of plural forms.
+tblColumnInfo = z 1 stolpcem;z več stolpci (#1)
+# LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfo = 1 vrstico;več vrsticami (#1)
+tblRowInfo = in 1 vrstico;in več vrsticami (#1)
 
 # table or grid cell information
 columnInfo = Stolpec %S
@@ -190,18 +186,85 @@ quicknav_Table       = Tabele
 quicknav_Checkbox    = Potrditvena polja
 
 # Shortened role names for braille
-linkAbbr           =       pvz
-pushbuttonAbbr     =       gmb
-passwordtextAbbr   =       bsdgesl
-imagemapAbbr       =       slkzml
-figureAbbr         =       pdb
-textareaAbbr       =       bsdobmo
+menubarAbbr        =       vrstica z menijem
+scrollbarAbbr      =       drsni trak
+gripAbbr           =       držalo
+alertAbbr          =       opozorilo
+menupopupAbbr      =       pojavni meni
+documentAbbr       =       dokument
+paneAbbr           =       pano
+dialogAbbr         =       pogovorno okno
+separatorAbbr      =       razmejevalec
+toolbarAbbr        =       orodna vrstica
+statusbarAbbr      =       vrstica stanja
 tableAbbr          =       tbl
-tableInfoAbbr = %S %S %S
-# LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
+columnheaderAbbr   =       glava stolpca
+rowheaderAbbr      =       glava vrstice
+columnAbbr         =       stolpec
+rowAbbr            =       vrstica
+cellAbbr           =       celica
+linkAbbr           =       pvz
+listAbbr           =       seznam
+listitemAbbr       =       element seznama
+outlineAbbr        =       oris
+outlineitemAbbr    =       element orisa
+pagetabAbbr        =       zavihek
+propertypageAbbr   =       stran lastnosti
+graphicAbbr        =       grafika
+pushbuttonAbbr     =       gmb
+checkbuttonAbbr    =       potrditveni gumb
+radiobuttonAbbr    =       izbirni gumb
+comboboxAbbr       =       spustno polje
+progressbarAbbr    =       vrstica napredka
+sliderAbbr         =       drsnik
+spinbuttonAbbr     =       vrtljivi gumb
+diagramAbbr        =       diagram
+animationAbbr      =       animacija
+equationAbbr       =       enačba
+buttonmenuAbbr     =       menijski gumb
+whitespaceAbbr     =       prazen prostor
+pagetablistAbbr    =       seznam zavihkov
+canvasAbbr         =       platno
+checkmenuitemAbbr  =       potrditveni element
+labelAbbr          =       oznaka
+passwordtextAbbr   =       bsdgesl
+radiomenuitemAbbr  =       izbirni element
+textcontainerAbbr  =       vsebovalnik besedila
+togglebuttonAbbr   =       preklopni gumb
+treetableAbbr      =       tabela z drevesom
+headerAbbr         =       glava
+footerAbbr         =       noga
+paragraphAbbr      =       odstavek
+entryAbbr          =       vnos
+captionAbbr        =       napis
+headingAbbr        =       naslov
+sectionAbbr        =       odsek
+formAbbr           =       obrazec
+comboboxlistAbbr   =       seznam spustnega polja
+comboboxoptionAbbr =       možnost spustnega polja
+imagemapAbbr       =       slkzml
+listboxoptionAbbr  =       možnost
+listboxAbbr        =       polje s seznamom
+flatequationAbbr   =       ploska enačba
+gridcellAbbr       =       mrežna celica
+noteAbbr           =       opomba
+figureAbbr         =       pdb
+definitionlistAbbr =       seznam definicij
+termAbbr           =       izraz
+definitionAbbr     =       definicija
+textareaAbbr       =       bsdobmo
+
+# LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
+# Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableColumnInfoAbbr = #1c;#1c
-# LOCALIZATION NOTE (tableRowInfoAbbr): Semi-colon list of plural forms.
+tblColumnInfoAbbr = #1c;#1c
+# LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
+# Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tableRowInfoAbbr = #1r;#1r
+tblRowInfoAbbr = #1r;#1r
 cellInfoAbbr = c%Sr%S
+
+stateCheckedAbbr = (x)
+stateUncheckedAbbr = ( )
+statePressedAbbr = (x)
+stateUnpressedAbbr = ( )
