--- a/sl/dom/chrome/dom/dom.properties
+++ b/sl/dom/chrome/dom/dom.properties
@@ -205,3 +205,4 @@ KeyNameZoomWarning=Vrednost KeyboardEvent.key "Zoom" je zastarela in bo preimeno
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
 KeyNameDeadKeysWarning=Vrednosti KeyboardEvent.key, ki se začenjajo z "Dead", so zastarele in bodo združene v "Dead". Več o tem: https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Uvažanje vozlišč XUL v dokument z vsebino je zastarelo. Ta možnost utegne biti kmalu umaknjena.
+XMLDocumentLoadPrincipalMismatch=Uporaba document.load je prepovedana na dokumentih, ki prihajajo iz drugih oken. Samo okno, v katerem je bil dokument ustvarjen, lahko kliče .load na tem dokumentu. Raje uporabite XMLHttpRequest.
