--- a/sl/security/manager/chrome/pipnss/nsserrors.properties
+++ b/sl/security/manager/chrome/pipnss/nsserrors.properties
@@ -299,3 +299,6 @@ SEC_ERROR_LOCKED_PASSWORD=Geslo je zaklenjeno.
 SEC_ERROR_UNKNOWN_PKCS11_ERROR=Neznana napaka PKCS #11.
 SEC_ERROR_BAD_CRL_DP_URL=Neznan ali nepodprt URL v imenu točke za širjenje CRL.
 SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=Sporočilo je bil podpisano s pomočjo algoritma za podpise, ki je iz varnostnih razlogov onemogočen.
+MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Strežnik uporablja opredeljevanje ključev (HPKP), vendar ni bilo mogoče sestaviti zaupanja vredne verige digitalnih potrdil, ki bi ustrezala. Zlorab opredeljevanja ključev ni mogoče zavrniti.
+MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Strežnik uporablja digitalno potrdilo z razširitvijo osnovnih omejitev, kar ga predstavlja kot overitelja. V primeru pravilno izdanega digitalnega potrdila se to ne bi smelo zgoditi.
+MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Strežnik je predstavil digitalno potrdilo z velikostjo ključa, ki je premajhna za vzpostavitev varne povezave.
