--- a/sl/webapprt/webapprt/webapp.properties
+++ b/sl/webapprt/webapprt/webapp.properties
@@ -40,6 +40,14 @@ webapps.install.title=Namesti %S
 webapps.install.description=Ali želite namestiti %S?
 webapps.install.install=Namesti aplikacijo
 webapps.install.dontinstall=Ne namesti
+# LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
+# of the webapp being uninstalled.
+webapps.uninstall.title=Odstrani %S
+# LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
+# name of the webapp being uninstalled.
+webapps.uninstall.description=Ali želite odstraniti %S?
+webapps.uninstall.uninstall=Odstrani aplikacijo
+webapps.uninstall.dontuninstall=Ne odstrani
 
 paymentDialog.title=Plačilo
 paymentDialog.message=Katerega ponudnika plačil želite uporabiti?
