--- a/sl/toolkit/chrome/global/aboutSupport.properties
+++ b/sl/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = Ni parametrov ClearType
 adapterDescription = Opis kartice
 adapterVendorID = ID izdelovalca
 adapterDeviceID = ID naprave
+adapterSubsysID = ID podsistema
 adapterDrivers = Gonilniki kartice
 adapterRAM = Pomnilnik kartice
 driverVersion = Različica gonilnika
@@ -71,6 +72,7 @@ driverDate = Datum gonilnika
 adapterDescription2 = Opis kartice (GPU #2) 
 adapterVendorID2 = ID izdelovalca (GPU #2) 
 adapterDeviceID2 = ID naprave(GPU #2)
+adapterSubsysID2 = ID podsistema (GPU #2)
 adapterDrivers2 = Gonilniki kartice (GPU #2)
 adapterRAM2 = Pomnilnik kartice (GPU #2)
 driverVersion2 = Različica gonilnika (GPU #2)
